<resources>
    <string name="app_name">BudgetTracker2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kategori">KATEGORI</string>
    <string name="add_new_category">Add new category</string>
    <string name="arrow">arrow</string>
    <string name="add_new_transaction_button">Add New Transaction Button</string>
    <string name="spend">Spend</string>
    <string name="income">Income</string>
</resources>