<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="hs_vmodel"
            type="com.example.budgettracker2.viewModels.HSViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".category.CategoryFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_hs"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Budget Tracker" />
        <Button
            android:contentDescription="@string/spend"
            android:id="@+id/btn_budget_tm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_big"
            android:background="@drawable/budget_tm"
            app:rupiahFormat="@{hs_vmodel.tm_spend}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_hs" />


        <Button
            android:id="@+id/btn_budget_rn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:contentDescription="@string/income"
            android:background="@drawable/buget_rn_shape"
            app:rupiahFormatN="@{hs_vmodel.tySpent}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_budget_tm" />


        <TextView
            android:id="@+id/text_k"
            style="@style/big_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/kategori"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_budget_rn" />

        <Button
            android:id="@+id/add_category"
            style="@style/big_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:onClick="@{()-> hs_vmodel.onAddCategoryClick()}"
            android:text="@string/add_new_category"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/list_kategori"
            app:layout_constraintStart_toStartOf="@+id/text_k"
            app:layout_constraintTop_toBottomOf="@+id/text_k" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_kategori"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_category" />

        <ImageView
            android:id="@+id/button"
            android:contentDescription="@string/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_arrow_forward_ios_24"
            app:layout_constraintBottom_toTopOf="@+id/list_kategori"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{() -> hs_vmodel.onClick()}"
            app:layout_constraintTop_toBottomOf="@+id/btn_budget_rn" />

        <com.example.budgettracker2.DraggableFloatingActionButton
            android:id="@+id/hsfab"
            android:contentDescription="@string/add_new_transaction_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:onLongClick="@{(view) -> hs_vmodel.onFabHSLongClick(view)}"
            android:src="@drawable/fab"
            app:fabCustomSize="72dp"
            app:maxImageSize="72dp"
            android:scaleType="center"
            android:onClick="@{()->hs_vmodel.onNavigateToInput(-1)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>